loopdowhile.Poucet1.scala.error
Erreur de compilation :
Poucet1:17: error: '=>' expected but integer literal found.
    case =< 2 => right();
            ^Poucet1:18: error: illegal start of simple pattern
    case => 3 => left();
         ^Poucet1:18: error: '=>' expected but ';' found.
    case => 3 => left();
                       ^